# rag

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
data/chroma/: chroma.sqlite3
docs/: free_llm_options.md  pyproject_explanation.md
models/: phi-2.Q4_K_M.gguf
src/: __init__.py  document_loader.py  embeddings.py  rag_chain.py  retriever.py
utils/: db_viewer.py  model_download.py  model_onnix_download.py  model_qt_download.py
